<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <Button
            android:id="@+id/homework2"
            android:layout_marginBottom="20dp"
            android:layout_width="200dp"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:text="@string/homework_2"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="#F3E702"
            />
        <Button
            android:id="@+id/homework3"
            android:layout_width="200dp"
            android:layout_marginBottom="20dp"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:text="@string/homework_3"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="#F3E702"
            />
        <Button
            android:id="@+id/homework4"
            android:layout_width="200dp"
            android:layout_marginBottom="20dp"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:text="@string/homework_4"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="#F3E702"
            />
        <Button
            android:id="@+id/homework6"
            android:layout_width="200dp"
            android:layout_marginBottom="20dp"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:text="@string/homework_6"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="#F3E702"
            />
        <Button
            android:id="@+id/homework7"
            android:layout_width="200dp"
            android:layout_marginBottom="20dp"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:text="@string/homework_7"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="#F3E702"
            />
    </LinearLayout>
</ScrollView>